[project]
name = "pyrobale"
version = "0.3.8.5"
authors = [
    { name = "Ali Safamanesh", email = "darg.q.a.a@gmail.com" },
    { name = "Aydin Rahbaran", email = "codewizaard9@gmail.com"},
]
description = "A python wrapper for bale api"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ["aiohttp"]
[project.urls]
github = "https://github.com/pyrobale/pyrobale"
website = "https://pyrobale.github.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyrobale"]