[project]
name = "pyrobale"
version = "0.6.7"
authors = [
    { name = "Ali Safamanesh", email = "daradege@proton.me" },
]
description = "A python wrapper for bale api"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ["aiohttp"]
[project.urls]
github = "https://github.com/pyrobale/pyrobale"
website = "https://pyrobale.ir"
documentation = "https://docs.pyrobale.ir"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyrobale"]
